[package]
name = "tatzelwurm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
atoi = "2.0.0"
bytes = "1.7.2"
futures = "0.3.31"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }

[[bin]]
name = "coordinator"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/client.rs"
