[package]
name = "tatzelwurm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
atoi = "2.0.0"
byteorder = "1.5.0"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
tabled = "0.16.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
uuid = { version = "1.10.0", features = ["fast-rng", "serde", "v4"] }

[[bin]]
name = "tatzelwurm"
path = "src/main.rs"

[[bin]]
name = "workwurm"
path = "src/bin/worker.rs"

[[bin]]
name = "actionwurm"
path = "src/bin/actioner.rs"
